[package]
name = "pretty-wallet-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6"
rand = "0.8.5"
coins-bip32 = "0.7.0"
coins-bip39 = "0.7.0"
ethers = { git = "https://github.com/gakonst/ethers-rs" }
hex = "0.4.3"
serde = "1.0.144"
serde_json = "1.0.85"
